fix overflow

--- a/letsgobiking/LetsGoBiking/ThinClient/main.css
+++ b/letsgobiking/LetsGoBiking/ThinClient/main.css
@@ -1,4 +1,4 @@
-#map {
+#main-row > * > .card {
     height: 70vh;
 }
 
